{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 208,
  "lineage": "cf74f814-5d9d-a3a9-1148-c335cfed53bb",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "coalfire-eip",
      "provider": "module.networking.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a746ba4b94f614f7",
            "domain": "vpc",
            "id": "eipalloc-02b4d64b076f67ddf",
            "network_border_group": "us-east-1",
            "network_interface": "eni-043d99463944dba17",
            "private_dns": "ip-10-1-1-245.ec2.internal",
            "private_ip": "10.1.1.245",
            "public_dns": "ec2-34-200-111-163.compute-1.amazonaws.com",
            "public_ip": "34.200.111.163",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.main",
            "module.compute.aws_security_group.compute_security",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_network_interface.testing-nwi",
            "module.networking.aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main_instance",
      "provider": "module.compute.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0af3577fe5e3532",
            "arn": "arn:aws:ec2:us-east-1:218943385380:instance/i-0e107a13daf15c582",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e107a13daf15c582",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "coalfire-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fccd90454b42c737",
            "private_dns": "ip-10-1-1-63.ec2.internal",
            "private_ip": "10.1.1.63",
            "public_ip": "54.160.143.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c1017e6fb3bcba88",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c92f4becf8d24d0",
            "tags": {
              "Name": "redhat-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03731ffb3d4490dca"
            ]
          },
          "dependencies": [
            "aws_vpc.main",
            "module.compute.aws_security_group.compute_security",
            "module.networking.aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "module.networking.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218943385380:internet-gateway/igw-065a52e1db9ec5f07",
            "id": "igw-065a52e1db9ec5f07",
            "owner_id": "218943385380",
            "vpc_id": "vpc-04b36e5cd35e751c3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_lb",
      "provider": "module.compute.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:218943385380:loadbalancer/app/app-load-balancer/cd5e67a8cae946e1",
            "arn_suffix": "app/app-load-balancer/cd5e67a8cae946e1",
            "dns_name": "app-load-balancer-1989144240.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:218943385380:loadbalancer/app/app-load-balancer/cd5e67a8cae946e1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-load-balancer",
            "security_groups": [
              "sg-0af3a5a2f73d35e0c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06c92f4becf8d24d0"
              },
              {
                "subnet_id": "subnet-0a94aece1d498270c"
              }
            ],
            "subnets": [
              "subnet-06c92f4becf8d24d0",
              "subnet-0a94aece1d498270c"
            ],
            "vpc_id": "vpc-04b36e5cd35e751c3",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.compute.aws_security_group.lb_sg",
            "module.networking.aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "module.compute.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:218943385380:listener/app/app-load-balancer/cd5e67a8cae946e1/fde718e3d79a7de2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:218943385380:targetgroup/alb-target-group/9b8ccac68634255e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:218943385380:listener/app/app-load-balancer/cd5e67a8cae946e1/fde718e3d79a7de2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:218943385380:loadbalancer/app/app-load-balancer/cd5e67a8cae946e1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_vpc.main",
            "module.compute.aws_lb.application_lb",
            "module.compute.aws_lb_target_group.alb_target_group",
            "module.compute.aws_security_group.lb_sg",
            "module.networking.aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "module.compute.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:218943385380:targetgroup/alb-target-group/9b8ccac68634255e",
            "arn_suffix": "targetgroup/alb-target-group/9b8ccac68634255e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:218943385380:targetgroup/alb-target-group/9b8ccac68634255e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04b36e5cd35e751c3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "testing-nwi",
      "provider": "module.networking.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-043d99463944dba17",
            "ipv6_address_count": 0,
            "mac_address": "0a:f0:45:50:88:d1",
            "private_ip": "10.1.1.245",
            "private_ips": [
              "10.1.1.245"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-03731ffb3d4490dca"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c92f4becf8d24d0"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.compute.aws_security_group.compute_security",
            "module.networking.aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "module.networking.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218943385380:route-table/rtb-07d0ec8b0ee149fc6",
            "id": "rtb-07d0ec8b0ee149fc6",
            "owner_id": "218943385380",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-065a52e1db9ec5f07",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "vpc_id": "vpc-04b36e5cd35e751c3"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.networking.aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "module.networking.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218943385380:route-table/rtb-0850ee0448df7dc72",
            "id": "rtb-0850ee0448df7dc72",
            "owner_id": "218943385380",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-065a52e1db9ec5f07",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "vpc_id": "vpc-04b36e5cd35e751c3"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.networking.aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table",
      "each": "list",
      "provider": "module.networking.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04eeaaeecba521f15",
            "route_table_id": "rtb-07d0ec8b0ee149fc6",
            "subnet_id": "subnet-09b793a371ca07186"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.private_route",
            "module.networking.aws_subnet.private_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b113e16b03a2d17b",
            "route_table_id": "rtb-07d0ec8b0ee149fc6",
            "subnet_id": "subnet-07da2831bb8a49d5e"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.private_route",
            "module.networking.aws_subnet.private_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table",
      "each": "list",
      "provider": "module.networking.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0323990816dea8866",
            "route_table_id": "rtb-0850ee0448df7dc72",
            "subnet_id": "subnet-0a94aece1d498270c"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.public_route",
            "module.networking.aws_subnet.public_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd9ad8aaba50553b",
            "route_table_id": "rtb-0850ee0448df7dc72",
            "subnet_id": "subnet-06c92f4becf8d24d0"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.public_route",
            "module.networking.aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_security",
      "provider": "module.compute.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218943385380:security-group/sg-0ed3733997a91c8d0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ed3733997a91c8d0",
            "ingress": [],
            "name": "asg_security",
            "name_prefix": "",
            "owner_id": "218943385380",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-04b36e5cd35e751c3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "compute_security",
      "provider": "module.compute.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218943385380:security-group/sg-03731ffb3d4490dca",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03731ffb3d4490dca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jmcf_redhat_sg",
            "name_prefix": "",
            "owner_id": "218943385380",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-04b36e5cd35e751c3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "module.compute.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218943385380:security-group/sg-0af3a5a2f73d35e0c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af3a5a2f73d35e0c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb_security_group",
            "name_prefix": "",
            "owner_id": "218943385380",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "coalfire_lb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b36e5cd35e751c3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "each": "list",
      "provider": "module.networking.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218943385380:subnet/subnet-09b793a371ca07186",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-09b793a371ca07186",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218943385380",
            "tags": {
              "Name": "Sub3"
            },
            "tags_all": {
              "Name": "Sub3"
            },
            "vpc_id": "vpc-04b36e5cd35e751c3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218943385380:subnet/subnet-07da2831bb8a49d5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-07da2831bb8a49d5e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218943385380",
            "tags": {
              "Name": "Sub4"
            },
            "tags_all": {
              "Name": "Sub4"
            },
            "vpc_id": "vpc-04b36e5cd35e751c3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "each": "list",
      "provider": "module.networking.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218943385380:subnet/subnet-0a94aece1d498270c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0a94aece1d498270c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218943385380",
            "tags": {
              "Name": "Sub1"
            },
            "tags_all": {
              "Name": "Sub1"
            },
            "vpc_id": "vpc-04b36e5cd35e751c3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218943385380:subnet/subnet-06c92f4becf8d24d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-06c92f4becf8d24d0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218943385380",
            "tags": {
              "Name": "Sub2"
            },
            "tags_all": {
              "Name": "Sub2"
            },
            "vpc_id": "vpc-04b36e5cd35e751c3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218943385380:vpc/vpc-04b36e5cd35e751c3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-080cf9edc1526e57a",
            "default_route_table_id": "rtb-01834141db9b2b1eb",
            "default_security_group_id": "sg-055e871223a134c35",
            "dhcp_options_id": "dopt-d67cd3ac",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04b36e5cd35e751c3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01834141db9b2b1eb",
            "owner_id": "218943385380",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}